--- a/ClientSite/packages.config
+++ b/ClientSite/packages.config
@@ -1,9 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="4.0.0" targetFramework="net461" />
+  <package id="Carbon.Data.Protection" version="0.17.0" targetFramework="net461" />
+  <package id="Carbon.Json" version="1.6.0" targetFramework="net461" />
+  <package id="Carbon.Packaging" version="1.25.0" targetFramework="net461" />
+  <package id="Carbon.Storage" version="1.14.0" targetFramework="net461" />
+  <package id="Carbon.VersionControl" version="1.7.1" targetFramework="net461" />
+  <package id="Carbon.Versioning" version="1.5.0" targetFramework="net461" />
+  <package id="GitHub" version="1.11.4" targetFramework="net461" />
   <package id="jQuery" version="3.0.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="popper.js" version="1.12.9" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.4.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net461" />
 </packages>
