wcf restful with search

--- a/ClientSite/packages.config
+++ b/ClientSite/packages.config
@@ -8,6 +8,7 @@
   <package id="Carbon.VersionControl" version="1.7.1" targetFramework="net461" />
   <package id="Carbon.Versioning" version="1.5.0" targetFramework="net461" />
   <package id="GitHub" version="1.11.4" targetFramework="net461" />
+  <package id="HttpRestClient" version="0.2.1" targetFramework="net461" />
   <package id="jQuery" version="3.0.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net461" developmentDependency="true" />
